--- a/src/index.html
+++ b/src/index.html
@@ -550,6 +550,8 @@
                         <ul class="contacts__right">
                             <li class="contacts__item">Доставка и выдача: ежедневно </li>
                             <li class="contacts__item">Отдел продаж: пн-пт 10:00 – 18:00</li>
+                            <li class="contacts__item">ООО "Паскальтрейд"
+                            </li>
                             <li class="contacts__item">
                                 <a href='mailto:info@cargo-buyer.ru' class="contacts__link contacts__mail">info@cargo-buyer.ru</a>
                             </li>
