add new category

--- a/src/index.html
+++ b/src/index.html
@@ -228,6 +228,7 @@
                                         <option value="Рыболовные снасти">Рыболовные снасти</option>
                                         <option value="Запчасти">Запчасти</option>
                                         <option value="Косметика">Косметика</option>
+                                        <option value="Бижутерия">Бижутерия</option>
                                         <option value="Домашний текстиль">
                                             Домашний текстиль</option>
                                     </select>
@@ -596,6 +597,7 @@
                             <p class="price-list__text"><span>От 20 кг до 300 кг</span> – 6$ за кг (одежда, обувь, сумки, ремни)</p>
                             <p class="price-list__text"><span>От 300 кг</span> – 5$ за кг (одежда, обувь, сумки, ремни)</p>
                             <p class="price-list__text-red"><span>Только обувь:</span> до 20 кг - 7$ за кг, от 20 кг до 300 кг - 5$ за кг, от 300 кг - 4$&nbsp;за&nbsp;кг</p>
+                            <p class="price-list__text"><span>Бижутерия:</span> до 15 кг - 15$/кг, от 15 кг - 12 $/кг</p>
                             <div class="price-list__top">
                                 <ul class="price-list__list">
                                     <li class="price-list__cell">Чемоданы и дорожные сумки</li>
