--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,9 @@
                             <label for="" class="modal__label form__label"> Введите ваше имя:
                                 <input type="text" class="modal__input form__input" name="name" >
                             </label>
+                            <label for="" class="modal__label form__label"> Введите ваш e-mail:
+                                <input type="email" class="modal__input form__input" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                            </label>
                             <label for="" class="modal__label form__label"> Введите ваш номер телефона в <br> международном формате:
                                 <input type="text" class="modal__input form__input" name="phone" id='id-phone-inter'>
                             </label>
